--- a/templates/allinone_base/index.html
+++ b/templates/allinone_base/index.html
@@ -9,7 +9,7 @@
 <br>
 <br>
 <div class="container">
-    <a href="{% url 'unitconvertor:home'%}">
+    <a href="{% url 'currencyconvertor:home'%}">
         <div class="card bg-info">
             <div class="card-body text-center apps">
                 <p class="card-text">Unit Convetsion</p>
