--- a/templates/currencyconvertor/home.html
+++ b/templates/currencyconvertor/home.html
@@ -8,7 +8,7 @@
 <h5>Please select the currency types</h5>
 <br>
 
-<form action="{% url 'unitconvertor:convert'%}">
+<form action="{% url 'currencyconvertor:convert'%}">
     <div class="form-group">
     <div class="row">
         <div class="col-md-4">
